2025-12-16T01:02:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20252852476 # 840
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
* notice: last 14d: unq all: 10 10
* notice: prev accum: outdated-unq outdated-all / unq all: 415 589 / 420 594
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 425 599
* notice: prev exec diff / last date diff / accum: unq all: +5 +5 -0 -0 / +5 +5 -0 -0 / 5 5
* notice: removed / changed dates: [] / [2025-12-15]

2025-12-13T00:58:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20184212519 # 837
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-13
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 415 589 / 419 593
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 420 594
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-12]

2025-12-11T01:01:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20118398669 # 835
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-11
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 415 589 / 418 592
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 419 593
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-10]

2025-12-10T01:01:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20083663804 # 834