@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-16T01:02:13Z",
+  "timestamp" : "2025-12-19T01:01:42Z",
   "count_outdated" : 589,
   "uniques_outdated" : 415,
-  "count" : 599,
-  "uniques" : 425,
+  "count" : 600,
+  "uniques" : 426,
   "clones" : [
     {
       "timestamp": "2025-12-09T00:00:00Z",
@@ -40,6 +40,15 @@
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ],
       "uniques_decinc": [ 0, 5 ]
+    },
+    {
+      "timestamp": "2025-12-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
