@@ -1,6 +1,6 @@
 {
-  "count": 10,
-  "uniques": 10,
+  "count": 11,
+  "uniques": 11,
   "clones": [
     {
       "timestamp": "2025-12-09T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2025-12-15T00:00:00Z",
       "count": 5,
       "uniques": 5
+    },
+    {
+      "timestamp": "2025-12-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
